--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>es6</title>
 </head>
 <body>
-  <script src="dist/promise.js"></script>
+  <script src="dist/generator.js"></script>
 </body>
 </html>
