--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>es6</title>
 </head>
 <body>
-  <script src="dist/generator.js"></script>
+  <script src="dist/import.js"></script>
+  <script src="dist/function.js"></script>
 </body>
 </html>
